Added some functionalities to backend
